--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,77 @@
-.App {
+.container {
+  width: 800px;
+  margin: 20px auto;
+}
+
+/* menu */
+.menu {
+  display: flex;
+  margin-bottom: 10px;
+}
+.menu-item {
+  flex-grow: 1;
+  background: #d8d8d8;
+  margin: 2px;
+  padding: 5px;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.menu-active {
+  background: lightblue;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* page */
+.page {
+  height: calc(100vh - 80px);
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  /* justify-content: space-between; */
+}
+.page-elements {
+  margin-bottom: 20px;
+}
+.submit {
+  padding: 10px;
+  background: lightblue;
+  border: 1px #99c1ce solid;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+/* input */
+.input-row {
+  margin: 5px 0;
+  padding: 5px 15px;
+  border-radius: 4px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+label {
+  display: inline-block;
+  font-size: 14px;
+  margin-bottom: 2px;
+}
+
+input[type="text"] {
+  width: 50%;
+  padding: 5px;
+  display: block;
+  border: 1px #b8b8b8 solid;
+}
+
+.required {
+  color: red;
+}
+
+.invalid {
+  background: #cae5e9;
+}
+
+.validation-msg {
+  font-size: 12px;
+}
+
+input[type="checkbox"] {
+  display: inline-block;
+}
+
+.center {
+  text-align: center;
 }
